Fixed vertical margin on mobile balance boxes

--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -121,6 +121,9 @@ body{
 	.navbar{
 		margin-bottom: 10px;
 	}
+    .balance-box{
+        margin-bottom: 14px;
+    }
 }
 
 @media (max-width: 991px) {
